cmake_minimum_required(VERSION 3.10)
project(Td0)
set(CMAKE_CXX_STANDARD 17)
add_executable(Td0 main.cpp
        TD1/ex1.cpp
        TD1/ex2.cpp
        TD1/ex3.cpp
        TD1/ex5.cpp
        TD2/ex0_cours.cpp
        TD2/exo1_cours.cpp
        TD2/exo2_cours.cpp
        TD2/exo3_cours.cpp
        TD2/td/ex1.cpp
        TD2/td/ex2.cpp
        TD2/td/ex3.cpp
)